testsuite/tests/grammar/invalid_token_rule/bad-token-casing.lkt
import common

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example(@Example)
}
